A better server side algorithm with multithreading and task dependency handling. Extract TaskController interface out.